--- a/app/client/main.html
+++ b/app/client/main.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="utf-8">
-  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="shortcut icon" href="/new_favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Manoa Fit Connect</title>
 </head>
